<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/customOrderHistoryRowCardViewId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:id="@+id/customOrderHistoryRowLinearLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/customOrderHistoryRowOrderNumberLinearLayoutId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_order_history_row_order_number_text_view"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/customOrderHistoryRowOrderNumberTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/custom_order_history_row_order_number_count_text_view"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/customOrderHistoryRowCountLinearLayoutId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/customOrderHistoryRowOrderCountNumberTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_order_history_row_order_count_number_text_view"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/customOrderHistoryRowOrderCountNameTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/custom_order_history_row_order_count_name_text_view"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/customOrderHistoryRowOrderNamesTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_order_history_row_order_names_text_view"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:src="@drawable/custom_dashed_line" />

        <LinearLayout
            android:id="@+id/customOrderHistoryRowOrderDateLinearLayoutId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_order_history_row_order_placed_text_view"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/customOrderHistoryRowOrderDateTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/custom_order_history_row_order_date_text_view"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/customOrderHistoryRowOrderAmountLinearLayoutId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_order_history_row_order_for_amount_text_view"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/customOrderHistoryRowOrderAmountTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/custom_order_history_row_order_Amount_text_view"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/customOrderHistoryRowPaymentModeImageViewId"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="right|top"
        android:layout_margin="10dp"
        android:src="@drawable/cash" />
</androidx.cardview.widget.CardView>