<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".fragments.CartFragment">

    <ScrollView
        android:id="@+id/cartFragmentScrollViewId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/cartFragmentAddedItemsToCardLinearLayoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cartFragmentAddedItemsToCardRecyclerViewId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/cartFragmentUnderItemsRecyclerViewLinearLayoutId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cartFragmentApplyCouponCardViewId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:visibility="visible"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:id="@+id/cartFragmentApplyCouponLinearLayoutId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/discount" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:text="Apply Coupon"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cartFragmentAppliedOfferCardViewId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:visibility="visible"
                    app:cardBackgroundColor="#98FB98"
                    app:cardCornerRadius="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <LinearLayout
                            android:id="@+id/cartFragmentAppliedOfferYouSavedAmountLinearLayoutId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="You saved"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/cartFragmentAppliedOfferYouSavedAmountTextViewId"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:text="0"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/cartFragmentAppliedOfferNameTextViewId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/cartFragmentAppliedOfferYouSavedAmountLinearLayoutId"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:text="Get75"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/cartFragmentAppliedOfferDeleteImageViewId"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_baseline_delete_24" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/cartFragmentOrderSummaryLinearLayoutId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:orientation="vertical"
                    android:padding="5dp">

                    <LinearLayout
                        android:id="@+id/cartFragmentSubTotalLinearLayoutId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Sub Total" />

                        <TextView
                            android:id="@+id/cartFragmentSubTotalAmountTextViewId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="100" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cartFragmentDiscountLinearLayoutId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Discount" />

                        <TextView
                            android:id="@+id/cartFragmentDiscountAmountTextViewId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="0" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cartFragmentTaxesAndChargesLinearLayoutId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Taxes and Charges" />

                        <TextView
                            android:id="@+id/cartFragmentTaxesAndChargesAmountTextViewId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="53.54" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/custom_dashed_line" />

                    <LinearLayout
                        android:id="@+id/cartFragmentGrandTotalLinearLayoutId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Grand Total" />

                        <TextView
                            android:id="@+id/cartFragmentGrandTotalAmountTextViewId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="153.54" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/cartFragmentSelectPaymentModeButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:text="@string/cart_fragment_select_payment_method_button" />

    <LinearLayout
        android:id="@+id/cartFragmentEmptyBagMainLinearLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/cartFragmentCartIsEmptyTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_fragment_your_cart_is_empty_text_view"
            android:textSize="20sp" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cartFragmentEmptyBagImageViewId"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/cartFragmentCartIsEmptyTextViewId"
            android:layout_marginTop="20dp"
            android:src="@drawable/shopping_bag"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/cartFragmentAddSomeItemsTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cartFragmentEmptyBagImageViewId"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/cart_fragment_add_some_items_text_view"
            android:textSize="10sp" />

        <Button
            android:id="@+id/cartFragmentExploreMenuButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/cart_fragment_explore_menu_button" />
    </LinearLayout>
</RelativeLayout>